--- a/public/index.html
+++ b/public/index.html
@@ -3589,7 +3589,7 @@ h4 {
 	</div>
 </div>
 
-<script src="http://hammerjs.github.io/dist/hammer.js"></script>
+<script src="https://hammerjs.github.io/dist/hammer.js"></script>
 
 
 
